# navigator-eventbus

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  LICENSE  Makefile  README.md  TOPICS.md  pyproject.toml
.claude/agents/: code-reviewer.md  product-analyst.md  qa-runner.md  sdd-autopilot.md  sdd-qa.md  sdd-research.md  sdd-worker.md
.claude/commands/: pr-review.md  product-analyst.md  sdd-brainstorm.md  sdd-codereview.md  sdd-done.md  sdd-explain.md  sdd-fromjira.md  sdd-insight.md  sdd-next.md  sdd-proposal.md  sdd-spec.md  sdd-start.md  sdd-status.md  sdd-task.md  sdd-tojira.md  user-story.md
.claude/rules/: python-development.md  rust-development.md
.claude/skills/meta-prompting/: SKILL.md
.claude/skills/meta-prompting/analyze-complexity/: SKILL.md
.claude/skills/meta-prompting/assess-quality/: SKILL.md
.claude/skills/meta-prompting/extract-context/: SKILL.md
.claude/skills/meta-prompting/meta-prompt-iterate/: SKILL.md
.claude/workflows/: sdd-insight.js
.github/workflows/: ci.yml  codeql-analysis.yml  release.yml
scripts/: bench_emit_overhead.py
sdd/: WORKFLOW.md
sdd/templates/: brainstorm.md  proposal.md  research_plan.prompt.md  spec.md  synthesis.prompt.md  task.md
src/navigator_eventbus/: __init__.py  _imports.py  converters.py  core.py  dlq.py  envelope.py  evb.py  ingress_models.py  serialization.py  version.py
src/navigator_eventbus/backends/: __init__.py  base.py  memory.py  redis_pubsub.py  redis_streams.py
src/navigator_eventbus/brokers/: __init__.py  _conf.py  connection.py  consumer.py  producer.py  serializers.py  wrapper.py
src/navigator_eventbus/brokers/rabbitmq/: __init__.py  bridge.py  connection.py  consumer.py  downlink.py  producer.py
src/navigator_eventbus/brokers/redis/: __init__.py  connection.py  consumer.py  producer.py
src/navigator_eventbus/brokers/sqs/: __init__.py  connection.py  consumer.py  producer.py
src/navigator_eventbus/hooks/: __init__.py  base.py  file_watchdog.py  manager.py  mixins.py  models.py  scheduler.py
src/navigator_eventbus/hooks/brokers/: __init__.py  base.py  mqtt.py  rabbitmq.py  redis.py  sqs.py
src/navigator_eventbus/ingress/: __init__.py  grpc.py  websocket.py
src/navigator_eventbus/ingress/proto/: README.md  __init__.py  events.proto  events_pb2.py  events_pb2_grpc.py
src/navigator_eventbus/lifecycle/: __init__.py  base.py  global_registry.py  meta.py  mixin.py  provider.py  registry.py  trace.py  yaml_loader.py
src/navigator_eventbus/lifecycle/subscribers/: __init__.py  logging.py  webhook.py
src/navigator_eventbus/subscribers/: __init__.py  audit.py  metrics.py  notification.py
templates/: README.md
tests/: conftest.py  test_backends.py  test_backends_streams.py  test_converters.py  test_core.py  test_dlq.py  test_envelope.py  test_envelope_schema_version.py  test_evb.py  test_hook_type_registry.py  test_hooks_agent_mixin.py  test_hooks_base_and_concrete.py  test_hooks_imports.py  test_hooks_manager.py  test_ingress_grpc.py  test_ingress_websocket.py  test_integration.py  test_neutrality.py  test_package.py  test_schema_version_propagation.py  test_serialization.py  test_subscribers_audit_metrics.py  test_subscribers_notification.py
tests/brokers/: __init__.py  test_connection.py  test_hook_rewire.py  test_producer.py  test_rabbitmq.py  test_redis_consumer.py  test_redis_integration.py  test_redis_reclaim.py  test_serializers.py  test_sqs.py
tests/hooks/: test_route_to_bus_tristate.py
tests/lifecycle/: conftest.py  test_base.py  test_dual_emit_integration.py  test_emit_overhead.py  test_global_registry.py  test_logging_subscriber.py  test_meta.py  test_mixin.py  test_provider.py  test_public_api.py  test_registry.py  test_registry_fire_and_forget.py  test_trace_context.py  test_webhook_subscriber.py  test_yaml_loader.py
