[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "navigator-eventbus"
version = "0.1.0"
description = "Standalone async event bus + generic hooks fabric (extracted from ai-parrot FEAT-310)"
authors = [
    {name = "Jesus Lara", email = "jesuslara@phenobarbital.info"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["asyncio", "eventbus", "events", "hooks", "pubsub", "redis-streams"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]

dependencies = [
    "navconfig[default]>=2.2.2",
    "asyncdb>=2.11",
    "aiohttp>=3.9",
    "pydantic>=2.0",
]

[project.optional-dependencies]
redis = [
    "redis>=5",
]
grpc = [
    "grpcio>=1.74",
    "grpcio-tools>=1.74",
]
notify = [
    "async-notify>=1.5.2",
]
scheduler = [
    "apscheduler",
]
watchdog = [
    "watchdog",
]
mqtt = [
    "gmqtt",
]
brokers = [
    "navigator-eventbus[redis]",
]
rabbitmq = [
    "aiormq>=6.7",
]
sqs = [
    "aioboto3>=12",
]
pickle = [
    "cloudpickle>=3",
]
serializer = [
    "cloudpickle>=3",
    "msgpack>=1",
    "jsonpickle>=3",
]
all = [
    "navigator-eventbus[redis,grpc,notify,scheduler,watchdog,mqtt,brokers,rabbitmq,sqs]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-aiohttp>=1.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/phenobarbital/navigator-eventbus"
Source = "https://github.com/phenobarbital/navigator-eventbus"
Tracker = "https://github.com/phenobarbital/navigator-eventbus/issues"

# ---------------------------------------------------------------------------
# Hatchling — src/ layout
# ---------------------------------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["src/navigator_eventbus"]

# ---------------------------------------------------------------------------
# Shared tool configs
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
markers = [
    "redis: marks tests that require a running Redis server (deselect with '-m \"not redis\"')",
    "integration: marks integration tests that require a running Redis server (deselect with '-m \"not integration\"')",
]

[tool.ruff]
line-length = 120
target-version = "py311"
# Generated gRPC code (events_pb2.py / events_pb2_grpc.py) — do not lint
# machine-generated stubs (mirrors ai-parrot's proto/README.md convention).
extend-exclude = ["src/navigator_eventbus/ingress/proto/events_pb2*.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
exclude = ["src/navigator_eventbus/ingress/proto/events_pb2.*\\.py$"]
